Delegate entirely for item render passes